--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-ciao tocca
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8" />
+    <title> </title>
+  </head>
+  <body>
+    <img src="volantino.jpg">
+  </body>
+</html>
