aggiorna immagine volantino, metti centrato

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf8" />
-    <title> </title>
+    <title>Generatore di ozono O3 portatile</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
-    <img src="volantino.jpg">
+    <img src="volantino.png" />
   </body>
 </html>
