--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- For Resposive Device -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>BizPro || Responsive html5 template</title>
+		<title>OZONIZZATORI || Responsive html5 template</title>
 
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
@@ -92,7 +92,7 @@
 								<!-- SLIDE1  -->
 								<li data-index="rs-280" data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default"  data-title="Title Goes Here" data-description="">
 									<!-- MAIN IMAGE -->
-									<img src="images/home/slide-1.jpg"  alt="image" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="20000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="140">
+									<img src="images/home/cielo.jpg"  alt="image" class="rev-slidebg" data-bgparallax="3" data-bgposition="center center" data-duration="20000" data-ease="Linear.easeNone" data-kenburns="on" data-no-retina="" data-offsetend="0 0" data-offsetstart="0 0" data-rotateend="0" data-rotatestart="0" data-scaleend="100" data-scalestart="140">
 									<!-- LAYERS -->
 
 									<!-- LAYER NR. 1 -->
@@ -113,7 +113,7 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>BELIN, OZONIZZATTORI!</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -134,7 +134,7 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h6>Sub Head, Motto or Mission subtitle</h6>
+										<h6>Tanta roba</h6>
 									</div>
 
 
@@ -152,7 +152,7 @@
 										data-splitin="none" 
 										data-splitout="none" 
 										data-responsive_offset="on">
-										<a href="contact-us.html" class="project-button hvr-bounce-to-right">See Our Projects</a>
+										<a href="#about-us" class="project-button hvr-bounce-to-right">See Our Projects</a>
 									</div>
 								
 								</li>
@@ -198,7 +198,7 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>HELLO WE'RE OZONIZZATORI</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -265,7 +265,7 @@
 										data-splitout="none" 
 										data-responsive_offset="on" 
 										style="z-index: 6; white-space: nowrap;">
-										<h1>HELLO WE'RE BizPro</h1>
+										<h1>HELLO WE'RE OZONIZZATORI</h1>
 									</div>
 
 									<!-- LAYER NR. 2 -->
@@ -322,7 +322,7 @@
 			<section id="about-us">
 				<div class="container">
 					<div class="theme-title">
-						<h2>ABOUT OUR BIZPRO</h2>
+						<h2>ABOUT OUR OZONIZZATORI</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
 					</div> <!-- /.theme-title -->
 
