favicon + immagine prato

--- a/index.html
+++ b/index.html
@@ -806,7 +806,8 @@
 						</div> <!-- /.col- -->
 					</div> <!-- /.clear-fix -->
 				</div> <!-- /.container -->
-			</div> <!-- /#blog-section -->
+      </div> 
+      <!-- /#blog-section -->
 
 
 
